--- a/Documents/Work Diary/29052018.md
+++ b/Documents/Work Diary/29052018.md
@@ -44,3 +44,22 @@ def login(request):
             request.method = "GET"  
 			return render(request, 'applicationtest/login.html')
 ```
+#### Using href with Jinja2 template
+```
+<button><a href="{{ '/applicationtest/login' }}">Login</a></button>
+<button onclick="location.href='http://127.0.0.1:8000/applicationtest/login'">Login</button>
+```
+**Why url_for cannot be working?**
+
+#### Session Implementation
+```
+def home(request):  
+    if request.session.get('has_logged_in', False):  
+        return render(request, 'applicationtest/dashboard.html')  
+    else:  
+        return render(request, 'applicationtest/home.html')
+
+def logout(request):  
+    del request.session['has_logged_in']  
+    return render(request, 'applicationtest/home.html')
+```
