--- a/Documents/Work Diary/28052018.md
+++ b/Documents/Work Diary/28052018.md
@@ -1,4 +1,8 @@
-﻿## 28/05/2018
+﻿#### Django superuser
+**Username:**
+admin
+**Password:**
+ey## 28/05/2018
 ### Summary
 I set up the Github and create a folder keeping track of my work dairy and learning log. I watched half of the Django online courses on Udemy, focusing on data model creation, data migration and MTV pattern of Django, and put down some key notes. I also set up all the required environment on Pycharm, with Python 2.7.15, Django 1.8 and PostgreSQL 10.4.
 ### Github setup
@@ -23,7 +27,13 @@ Stop the server
 ```
 > pg_ctl stop -D ^"C^:^\Users^\lizh1^\Documents^\workspace^\resource^\pgsql^\data^"
 ```
+#### PostgreSQL
 **Username:**
 postgres
+**Password:**
+ey
+#### Django superuser
+**Username:**
+admin
 **Password:**
 ey
