--- a/Documents/Work Diary/29052018.md
+++ b/Documents/Work Diary/29052018.md
@@ -1,5 +1,6 @@
 ﻿## 29/05/2018
 ### Summary
+I set up the very first application and created a separate user model on the database. Then I implemented the registration and login functionality, which helped me go through jinja2 templates on how to use url reverse and handle parameters. I also implemented the session to keep user login status. 
 ### MTV
 #### Model trustful steps:
 Add application into settings.py Installed_App
