--- a/Documents/Work Diary/05062018.md
+++ b/Documents/Work Diary/05062018.md
@@ -1,6 +1,6 @@
 ## 05/06/2018
 ### Summary
-I built a automatic synchronization of two tables with clicking the button, and then I did some research on Celery, which is a preferred option to handle multi threading of Django. After all the steps of configuration and debugging, it works pretty well.
+I built an automatic synchronization of two tables with clicking the button, and then I did some research on Celery, which is a preferred option to handle multi threading of Django. After all the steps of configuration and debugging, it works pretty well.
 ### Celery Setup
 Mostly I followed instruction on **https://realpython.com/asynchronous-tasks-with-django-and-celery/**, except the scheduler.
 #### Required version
@@ -44,7 +44,7 @@ CELERY_IMPORTS = ("applicationtest.tasks")
 from datetime import timedelta  
   
 CELERYBEAT_SCHEDULE = {  
-    'Sync-every-20-seconds': {  
+    'Sync-every-30-seconds': {  
         'task': 'backgroundSync',  
   'schedule': timedelta(seconds=30),  
   },  
