--- a/Documents/Work Diary/06062018 and 13062018.md
+++ b/Documents/Work Diary/06062018 and 13062018.md
@@ -1,107 +1,85 @@
-## 05/06/2018
+## 06/06/2018 and 13/06/2018
 ### Summary
-I built an automatic synchronization of two tables with clicking the button, and then I did some research on Celery, which is a preferred option to handle multi threading of Django. After all the steps of configuration and debugging, it works pretty well.
-### Celery Setup
-Mostly I followed instruction on **https://realpython.com/asynchronous-tasks-with-django-and-celery/**, except the scheduler.
-#### Required version
-- Python 2.7.15
-- Django 1.8
-- Celery 3.1.25
-- Redis 2.10.6
-- Kombu 3.0.37
-#### Configuration
-/djangotest/djangotest/celery.py
+I did some research on how to segment multiple receipts on single page and designed the whole OCR process. The results are satisfying mostly but not in some cases.
+### Step 1 Set the threshold and preprocess the image
 ```python
-from __future__ import absolute_import  
-import os  
-from celery import Celery  
-from django.conf import settings  
+origin_img = cv2.imread("sample/sample_7.jpg")  
+img = cv2.resize(origin_img, None, fx=0.5, fy=0.5)  
+width = img.shape[0]  
+height = img.shape[1]  
   
-# set the default Django settings module for the 'celery' program.  
-os.environ.setdefault('DJANGO_SETTINGS_MODULE', 'djangotest.settings')  
-app = Celery('djangotest')  
-  
-# Using a string here means the worker will not have to  
-# pickle the object when using Windows.  
-app.config_from_object('django.conf:settings')  
-app.autodiscover_tasks(lambda: settings.INSTALLED_APPS)  
-  
-@app.task(bind=True)  
-def debug_task(self):  
-    print('Request: {0!r}'.format(self.request))
+blur = cv2.pyrMeanShiftFiltering(img, 15, 45)  
+gray = cv2.cvtColor(blur, cv2.COLOR_BGR2GRAY)  
+ret, threshold = cv2.threshold(gray, 0, 255, cv2.THRESH_BINARY+cv2.THRESH_OTSU)
 ```
-/djangotest/djangotest/settings.py
+### Step 2 Find contours based on the thresholds
 ```python
-# CELERY STUFF  
-BROKER_URL = 'redis://localhost:6379'  
-CELERY_RESULT_BACKEND = 'redis://localhost:6379'  
-CELERY_ACCEPT_CONTENT = ['application/json']  
-CELERY_TASK_SERIALIZER = 'json'  
-CELERY_RESULT_SERIALIZER = 'json'  
-CELERY_TIMEZONE = 'UTC'  
-CELERY_IMPORTS = ("applicationtest.tasks")  
-  
-from datetime import timedelta  
-  
-CELERYBEAT_SCHEDULE = {  
-    'Sync-every-30-seconds': {  
-        'task': 'backgroundSync',  
-  'schedule': timedelta(seconds=30),  
-  },  
-}
+_, contours, _ = cv2.findContours(threshold, cv2.RETR_LIST, cv2.CHAIN_APPROX_NONE)
 ```
-#### Adding Task
-/djangotest/applicationtest/tasks.py
+### Step 3 Change the data format to fit the Sklearn.Kmeans
 ```python
-from views import Alteruser, Newuser  
-from djangotest.celery import app  
+points = contours[0]  
+for i in range(1, len(contours)):  
+    points = np.concatenate((points, contours[i]), axis=0)  
   
-@app.task(name='backgroundSync')  
-def backgroundSync():  
-    alter_user_list = Alteruser.objects.all()  
-    for u in alter_user_list:  
-        if not Newuser.objects.filter(username=u.username).exists():  
-            new_newuser = Newuser()  
-            new_newuser.username = u.username  
-            new_newuser.password = u.password  
-            new_newuser.email = u.email  
-            new_newuser.first_name = u.first_name  
-            new_newuser.last_name = u.last_name  
-            new_newuser.save()  
-    new_user_list = Newuser.objects.all()  
-    for u in new_user_list:  
-        if not Alteruser.objects.filter(username=u.username).exists():  
-            new_alteruser = Alteruser()  
-            new_alteruser.username = u.username  
-            new_alteruser.password = u.password  
-            new_alteruser.email = u.email  
-            new_alteruser.first_name = u.first_name  
-            new_alteruser.last_name = u.last_name  
-            new_alteruser.save()
+final = points[0]  
+for i in range(1, len(points)):  
+    if points[i][0][0] != 0 and points[i][0][0] != height-1 and points[i][0][1] != 0 and points[i][0][1] != width-1:  
+        final = np.append(final, points[i], axis=0)  
+final_float = np.float32(final)
 ```
-#### Use Redis as a Celery "Broker"
-Install the Redis from Official website and install redis package in environment
-Turn to your terminal, in a new terminal window, fire up the server:
-```shell
-$ redis-server
+### Step 4 K-means clustering
+```python
+kmeans = KMeans(n_clusters=3, random_state=0).fit(final_float)
 ```
-To test it:
-```shell
-$ redis-cli ping
-> PONG
+### Step 5 Find corner points using clustering results
 ```
-#### RUN IT
-**Run them together!**
-As the worker open up thread and the beat is in charge of sending pulse command
+corners = dict()  
+  
+for i in range(len(kmeans.labels_)):  
+    if kmeans.labels_[i] not in corners:  
+        corners[kmeans.labels_[i]] = [final[i][0], final[i][1], final[i][0], final[i][1]]  
+    else:  
+        if final[i][0] < corners[kmeans.labels_[i]][0]:  
+            corners[kmeans.labels_[i]][0] = final[i][0]  
+        if final[i][1] < corners[kmeans.labels_[i]][1]:  
+            corners[kmeans.labels_[i]][1] = final[i][1]  
+        if final[i][0] > corners[kmeans.labels_[i]][2]:  
+            corners[kmeans.labels_[i]][2] = final[i][0]  
+        if final[i][1] > corners[kmeans.labels_[i]][3]:  
+            corners[kmeans.labels_[i]][3] = final[i][1]  
+print(corners)  
+  
+corner_points = dict()  
+for c in corners:  
+    corner_points[c] = [(corners[c][0], corners[c][1]), (corners[c][2], corners[c][1]), (corners[c][2], corners[c][3]), (corners[c][0], corners[c][3])]
 ```
-$ celery -A djangotest worker -l info
-...
-[INFO/MainProcess] Connected to redis://localhost:6379//
-[INFO/MainProcess] mingle: searching for neighbors
-[INFO/MainProcess] mingle: all alone
+### Step 6 Create masks and modify it based on preset corner
+```python
+for corner in corner_points.values():  
+    mask = np.zeros(img.shape, dtype=np.uint8)  
+    roi_corners = np.array([corner], dtype=np.int32)  
+    print(roi_corners)  
+    channel_count = img.shape[2]  
+    ignore_mask_color = (255,)*channel_count  
+    cv2.fillPoly(mask, roi_corners, ignore_mask_color)  
+    masked_image = cv2.bitwise_and(img, mask)  
+    cv2.imshow('Display', masked_image)  
+    cv2.waitKey()
 ```
+### Step 7 Show the image 
+```python
+cv2.drawContours(img, contours, -1, (0, 0, 255), 6)  
+for point in corners.values():  
+    cv2.circle(img, (int(point[0]), int(point[1])), 10, (255, 255, 0), -1)  
+    cv2.circle(img, (int(point[2]), int(point[3])), 10, (255, 255, 0), -1)  
+for point in kmeans.cluster_centers_:  
+    cv2.circle(img,(int(point[0]), int(point[1])), 10, (0, 255, 0), -1)  
+cv2.imshow('Display', img)  
+cv2.imwrite("contours.jpg", img)  
+cv2.waitKey()
 ```
-$ celery -A djangotest beat -l info
-...
-[INFO/MainProcess] beat: Starting...
-```
+**Sample receipt**
+![sample](https://github.com/E1even1ee/djangotest/blob/master/invoice/sample/sample_7.jpg)
+**Contours division and center allocation**
+![contours](https://github.com/E1even1ee/djangotest/blob/master/invoice/contours.jpg)
