--- a/Documents/Work Diary/06062018 and 13062018.md
+++ b/Documents/Work Diary/06062018 and 13062018.md
@@ -83,3 +83,7 @@ cv2.waitKey()
 ![sample](https://github.com/E1even1ee/djangotest/blob/master/invoice/sample/sample_7.jpg)
 **Contours division and center allocation**
 ![contours](https://github.com/E1even1ee/djangotest/blob/master/invoice/contours.jpg)
+### Output
+![output1](https://github.com/E1even1ee/djangotest/blob/master/invoice/output_1.jpg)
+![output2](https://github.com/E1even1ee/djangotest/blob/master/invoice/output_2.jpg)
+![output3](https://github.com/E1even1ee/djangotest/blob/master/invoice/output_3.jpg)
