--- a/Documents/Work Diary/26062018 - 04072018.md
+++ b/Documents/Work Diary/26062018 - 04072018.md
@@ -24,4 +24,4 @@ Build and install
 C:\tensorflow1\models\research> python setup.py build
 C:\tensorflow1\models\research> python setup.py install
 ```
-![output](https://github.com/E1even1ee/djangotest/tree/master/Documents/Dairy%20Pictures/labelImg.png)
+![output](https://github.com/E1even1ee/djangotest/tree/master/Documents/Dairy%20Pictures/labelImg.jpg)
