--- a/Documents/Work Diary/26062018 - 04072018.md
+++ b/Documents/Work Diary/26062018 - 04072018.md
@@ -30,6 +30,7 @@ The image .xml data will be used to create .csv files containing all the data fo
 ```
 C:\tensorflow1\models\research\object_detection> python xml_to_csv.py
 ```
+![CSV](https://github.com/E1even1ee/djangotest/blob/master/Documents/Dairy%20Pictures/xml_to_csv.jpg)
 For example, say you are training a classifier to detect receipts and invoices. You will replace the following code in generate_record.py:
 
 ```
